fix: Onboarding modal has wrong size
#1499

--- a/src/dotnet/Chat.UI.Blazor/Components/Onboarding/onboarding-modal.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/Onboarding/onboarding-modal.css
@@ -1,3 +1,3 @@
 .onboarding-modal.modal-frame {
-    @apply p-0 md:min-w-90 md:max-w-90 md:min-h-160 md:max-h-160;
+    @apply p-0 h-full md:min-w-90 md:max-w-90 md:min-h-160 md:max-h-160;
 }
